fix: margins between positions too large

--- a/src/style.css
+++ b/src/style.css
@@ -316,10 +316,6 @@ section {
 }
 
 /* Work Section */
-.position {
-  margin-top: var(--gap-medium);
-}
-
 .last {
   margin-bottom: 1em;
 }
